--- a/mchgzhpt/jsp/profitManage.html
+++ b/mchgzhpt/jsp/profitManage.html
@@ -8,7 +8,7 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
     <meta content="yes" name="apple-touch-fullscreen">
-    <title>费用管理</title>
+    <title>分润管理</title>
     <script src="../js/reset.js"></script>
     <link href="../css/reset.css" rel="stylesheet">
     <link href="../iconfont/workbench/iconfont.css" rel="stylesheet">
@@ -40,9 +40,8 @@
 </head>
 
 <body style="background: #ddd;">
-    <div class="cost-manage">
+    <div class="profit-manage">
         <div class="title">商户XXXX丨 代理商 23423432丨客户号200211</div>
-
         <div class="weui-cells">
             <div class="weui-cell">
                 <div class="weui-cell__hd">智能共享充电器</div>
@@ -51,30 +50,28 @@
                 </div>
             </div>
             <div class="weui-cell">
-                <div class="weui-cell__hd">计费1：1小时1元 前5分钟免费（10条）</div>
-                <div class="weui-cell__bd">
-                    <button class="btn mini-btn">设置</button>
-                </div>
-            </div>
-            <div class="weui-cell">
-                <div class="weui-cell__hd">计费2：1小时2元（10条）</div>
-                <div class="weui-cell__bd">
-                    <button class="btn mini-btn">设置</button>
-                </div>
+                <div class="weui-cell__hd">绝对分润比例 90%(100条)</div>
             </div>
         </div>
 
         <div class="weui-cells">
             <div class="weui-cell">
-                <div class="weui-cell__hd">
-                    <label class="weui-label">智能招财猫</label>
-                </div>
+                <div class="weui-cell__hd">智能招财猫</div>
                 <div class="weui-cell__bd">
                     <button class="btn mini-btn">全部设置</button>
                 </div>
             </div>
             <div class="weui-cell">
-                <div class="weui-cell__hd">计费：押金99元，前1小时1元，后每1小时2元，每日封顶金额10元，前10分钟免费</div>
+                <div class="weui-cell__hd">相对分润比例 90%(30个)</div>
+                <div class="weui-cell__bd">
+                    <button class="btn mini-btn">设置</button>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd">相对分润比例 80%(30个)</div>
+                <div class="weui-cell__bd">
+                    <button class="btn mini-btn">设置</button>
+                </div>
             </div>
         </div>
 
@@ -86,7 +83,7 @@
                 </div>
             </div>
             <div class="weui-cell">
-                <div class="weui-cell__hd">计费：未设置</div>
+                <div class="weui-cell__hd">绝对分润比例 90%(30个)</div>
             </div>
         </div>
     </div>
